@@ -2,7 +2,10 @@ Change Log
 
 
 Release 0.3.0.0
-	- added access control for ViewVC
+	- added creation of access control files for ViewVC (Apache webserver only)
+	- improved logging
+	- improved installer
+	- changed and completed language files
 	
 Release 0.2.3.0
 	- fixed issues with access file creation
